--- a/.github/actions/joke-action/package.json
+++ b/.github/actions/joke-action/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.8.1",
+    "@actions/core": "=1.8.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   }
