--- a/.github/actions/issue-maker/package.json
+++ b/.github/actions/issue-maker/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.8.1",
+    "@actions/core": "=1.8.0",
     "@actions/github": "^5.0.2"
   }
 }
